--- a/sections/col-grid-section.liquid
+++ b/sections/col-grid-section.liquid
@@ -1,7 +1,15 @@
 
 
 
-
+.second-img {
+display: none;
+}
+.card:hover .featured-img {
+display: none;
+}
+.card:hover .second-img {
+display: block;
+}
 
 {% schema %}
   {
